src/app/landing/landing.component.scss
h1 {
  font-size: 2.5em;
  text-align: center;
  margin-top: 20px;
}

p,
p.description {
  font-size: 1.2rem;
  color: #555;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
  text-align: justify;
  margin: 0 auto 20px auto;
  max-width: 80%;
  word-wrap: break-word;
}

.section-title,
.activities-section h2,
.about-section h2 {
  font-size: 1.5rem;
  font-weight: bold;
  text-align: center;
  margin-bottom: 10px;
}

.activities-section,
.about-section {
  margin: 20px 40px;
  color: black;
  font-size: 1.1rem;
  line-height: 1.6;
  text-align: justify;
}

.about-description {
  text-align: justify;
  font-size: 1rem;
  color: #555;
  line-height: 1.6;
  margin: 0 40px;
}

/* ACTIVITIES BUTTONS */
.button-activities {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin: 0 20px;
}

.button-activ {
  height: 170px;
  min-width: 100px;  //max-width: 90px; para reducir ancho botones Activid.
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 2px solid #d4a017;
  border-radius: 5px;
  background-color: #fff1b4;
  color: #333;
  cursor: pointer;
  transition: all 0.3s ease;
  text-align: center;
  padding: 5px 1px;
  font-size: 0.9em;
}

.button-activ img {
  width: 40px;
  height: 40px;
  object-fit: contain;
  margin-bottom: 6px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.button-activ .button-info {
  font-size: 0.92em;
  line-height: 1.2;
}

/* SUPERIOR BUTTONS BLOCK */
.button-contSupBlock {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin: 0 20px;
  min-width: 120px;
  margin-bottom: 10px;
}

.button-conSp,
.button-conIf {
  min-width: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 2px solid #d4a017;
  border-radius: 5px;
  background-color: #fff1b4;
  color: #333;
  cursor: pointer;
  transition: all 0.3s ease;
  text-align: center;
  padding: 7px 2px;
  height: 75px;
}

.button-conSp img,
.button-conIf img,
.button-content img {
  width: 30px;
  height: 30px;
  object-fit: contain;
  margin-bottom: 2px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* INFERIOR BUTTONS BLOCK */
.button-contInfBlock {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin: 0 20px;
  min-width: 120px;
}

/* BUTTON TITLE */
.button-title {
  font-weight: bold;
  font-size: 1.1em;
  margin: 4px 0 6px 0;
  display: block;
  text-align: center;
}

/* HOVER EFFECTS */
.button-activ:hover,
.button-content:hover {
  background-color: #e6d89c;
  color: #000;
}

/* RESPONSIVE */
@media (max-width: 768px) {
  p,
  p.description {
    font-size: 1rem;
    max-width: 95%;
    margin-left: 10px;
    margin-right: 10px;
  }
  .about-section,
  .activities-section,
  .about-description {
    margin-left: 10px;
    margin-right: 10px;
  }
  .button-activ {
  max-width: 90px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 2px solid #d4a017;
  border-radius: 5px;
  background-color: #fff1b4;
  color: #333;
  cursor: pointer;
  transition: all 0.3s ease;
  text-align: center;
  padding: 5px 1px;
  font-size: 0.75em;
}
}

